Fixed styles on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Futura';
-    src: url('/Futura.ttf');
-    src: url('/Futura.ttf') format('truetype'),
+    src: url('./Futura.ttc');
+    src: url('./Futura.ttc') format('truetype'),
     font-weight: normal;
     font-style: normal;
 }
@@ -47,7 +47,7 @@ body {
 .c-form {
     max-width: 400px;
     margin: 0 auto;
-    padding: 15px 25px 0;
+    padding: 15px 25px;
 }
 
 .c-form__label {
@@ -87,8 +87,8 @@ body {
 
 .c-svg {
     display: block;
-    padding-top: 20px;
     margin: 0 auto;
+    padding-top: 10px;
 }
 
 /***** Theme *****/
@@ -174,6 +174,10 @@ body {
 
     .t-center-content {
         padding-bottom: 15px;
+    }
+
+    .c-svg {
+        padding-top: 20px;
     }
 }
 
